# piper-rs

./: Cargo.toml
crates/espeak-rs-sys/: build.rs
crates/espeak-rs/src/: lib.rs
examples/: coqui_vits_wav.rs  enumerate_speakers.rs  kokoro_phonemes.rs  kokoro_wav.rs  mms_wav.rs  print_ordinals.rs  sherpa_vits_wav.rs  test_numbers.rs  usage.rs  wav.rs
src/: coqui_vits.rs  cotovia_vits.rs  gl_g2p.rs  japanese.rs  kokoro.rs  kokoro_mnn.rs  lib.rs  mms.rs  model.rs  number_spellout.rs  piper.rs  sherpa_vits.rs  supertonic3_mnn.rs  vits_tokenize.rs
src/rbnf/: az.txt  bn.txt  en.txt  gu.txt  he.txt  kn.txt  mr.txt  ms.txt  ta.txt  test_vectors.tsv  th.txt
