[workspace]
members = ["crates/espeak-rs"]
resolver = "1"

[package]
name = "piper-rs"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Use piper TTS models in Rust"
repository = "https://github.com/thewh1teagle/piper-rs"

[[bin]]
name = "bucket_samples"
path = "src/bin/bucket_samples.rs"
required-features = ["bucket-samples"]

[dependencies]
espeak-rs = { path = "crates/espeak-rs", version = "0.1.9", default-features = false }
mucab = { git = "https://github.com/DavidVentura/Mucab.git", optional = true }
ndarray = "0.16.1"
ndarray-npy = "0.9"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.89"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic", "ndarray"] }
rustfst = { version = "1.3", optional = true }
unicode-normalization = "0.1.25"
zip = { version = "0.6.6", default-features = false, features = ["deflate"], optional = true }

[dev-dependencies]
rodio = "0.19.0"

[features]
default = ["compile-espeak-intonations", "japanese", "fst-normalization", "bucket-samples"]
compile-espeak-intonations = ["espeak-rs/compile-espeak-intonations"]
japanese = ["dep:mucab"]
fst-normalization = ["dep:rustfst"]
bucket-samples = ["dep:zip"]
